feat: adding a skip step and icon to build (#184)

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -982,6 +982,10 @@ nav {
   .-inner {
     fill: var(--color-primary);
   }
+
+  &.-skip {
+    stroke: var(--color-lavender);
+  }
 }
 
 .pager-actions {
