--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -403,6 +403,8 @@ nav {
   flex-direction: column;
   justify-content: center;
 
+  min-width: 0;
+
   padding: 12px 0;
 
   background: var(--color-bg-dark);
@@ -413,6 +415,10 @@ nav {
   flex-direction: row;
   justify-content: space-between;
   padding: 0 24px;
+
+  &.-left {
+    justify-content: flex-start;
+  }
 }
 
 .build .error {
@@ -442,12 +448,12 @@ nav {
   margin: 0 8px 0 8px;
 }
 
-.row .message {
-  font-size: 1rem;
-  width: 60%;
-  white-space: nowrap;
-  overflow: hidden;
+.commit-msg {
+  flex-basis: 80%;
   text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  margin-left: 6px;
 }
 
 .time-info {
