--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -105,7 +105,8 @@ body.theme-light {
     border-bottom: 1px solid var(--color-bg-dark);
   }
 
-  .step-error {
+  .step-error,
+  .step-skipped {
     color: var(--color-red);
   }
 
