action -> cmd consistency

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -227,3 +227,8 @@
 .buttons .button:not(:last-child) {
   margin-right: 0.5rem;
 }
+
+// log action buttons
+.button.-log-action {
+  margin-right: 0.3rem;
+}
