--- a/src/scss/_tooltips.scss
+++ b/src/scss/_tooltips.scss
@@ -25,7 +25,7 @@
   z-index: 9999;
 
   background: transparent;
-  border: 4px solid transparent;
+  border: 0.1rem solid transparent;
 
   content: '';
 }
@@ -33,9 +33,8 @@
 [data-tooltip]:after {
   z-index: 9998;
 
-  min-width: 100px;
-  margin: 12px 0;
-  padding: 4px 6px;
+  margin: 0.75rem 0;
+  padding: 0.2rem 0.4rem;
 
   font-size: 0.8rem;
   line-height: 1.2;
@@ -58,13 +57,13 @@
 [data-tooltip]:focus:after {
   color: var(--color-text);
 
-  font-weight: 300;
+  font-weight: lighter;
 
   text-align: center;
 
   background-color: var(--color-bg-dark);
-  border: solid 1px var(--color-bg-light);
-  border-radius: 2px;
+  border: solid 0.05rem var(--color-bg-light);
+  border-radius: 0.1rem;
 }
 
 .tooltip-left:before,
@@ -75,9 +74,9 @@
 }
 
 .tooltip-left:before {
-  top: 8px;
+  top: 0.5rem;
 
-  margin-right: -7px;
+  margin-right: -0.5rem;
   margin-bottom: 0;
   margin-left: 0;
 
@@ -89,12 +88,12 @@
 .tooltip-left:hover:after,
 .tooltip-left:focus:before,
 .tooltip-left:focus:after {
-  -webkit-transform: translateX(-12px);
-  -moz-transform: translateX(-12px);
-  transform: translateX(-12px);
+  -webkit-transform: translateX(-0.8rem);
+  -moz-transform: translateX(-0.8rem);
+  transform: translateX(-0.8rem);
 }
 
 .tooltip-left:after {
-  margin-bottom: -16px;
+  margin-bottom: -1rem;
   margin-left: 0;
 }
