--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -143,7 +143,7 @@ header {
       border-radius: 0 0 0 0.25em;
       transform: rotate(135deg);
 
-      content: "";
+      content: '';
 
       clip-path: polygon(0% 0%, 100% 100%, 0% 100%);
     }
@@ -231,7 +231,7 @@ nav {
   /* ellipsis character */
   animation: ellipsis steps(4, end) 900ms infinite;
 
-  content: "\2026";
+  content: '\2026';
 }
 
 .util {
@@ -256,13 +256,13 @@ nav {
   &::before {
     margin-right: 0.3em;
 
-    content: "[";
+    content: '[';
   }
 
   &::after {
     margin-left: 0.3em;
 
-    content: "]";
+    content: ']';
   }
 }
 
@@ -440,9 +440,9 @@ nav {
   margin-right: 1rem;
   background: linear-gradient(
     90deg,
-    rgba(0, 0, 0, 0) calc(3.25em - 1px),
-    #bfbfbf calc(3.25em),
-    rgba(0, 0, 0, 0) calc(3.25em + 1px)
+    hsla(0, 0, 0, 0) calc(3.25em - 1px),
+    hsla(0, 0%, 75%, 1) calc(3.25em),
+    hsla(0, 0, 0, 0) calc(3.25em + 1px)
   );
 }
 
@@ -690,7 +690,7 @@ nav {
 
   border-width: 5px;
 
-  content: " ";
+  content: ' ';
 }
 
 .recent-build-tooltip .line {
@@ -703,7 +703,7 @@ nav {
   margin-right: 0.5em;
 
   &:before {
-    content: "#";
+    content: '#';
   }
 }
 
@@ -1091,7 +1091,7 @@ nav {
   &::after {
     display: block;
     position: absolute;
-    content: "";
+    content: '';
     top: -0.5rem;
     right: 0;
     border-color: transparent;
@@ -1271,7 +1271,7 @@ nav {
 }
 
 .added-image.chevron:before {
-  content: "";
+  content: '';
   border-style: solid;
   border-width: 0.1rem 1rem 0.1rem 0.2rem;
   border-color: var(--color-primary);
