--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -212,7 +212,8 @@ nav {
   justify-content: space-between;
   margin: 0.5rem 0 0 0;
   padding: 1rem;
-
+  text-decoration: none;
+  color: var(--color-text);
   background-color: var(--color-bg-dark);
 }
 
