--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -796,7 +796,7 @@ nav {
 .logs-container {
   margin-right: -1rem;
   margin-left: -1rem;
-  padding: 0.5em 0;
+  padding-bottom: 0.5em;
 
   background-color: var(--color-bg-dark);
 }
@@ -807,8 +807,22 @@ nav {
 }
 
 .log-table {
+  overflow-y: auto;
+  display: block;
   table-layout: fixed;
   width: 100%;
+
+  height: 15rem;
+
+  min-height: 10rem;
+  max-height: 50rem;
+
+  resize: vertical;
+}
+.log-buttons {
+  padding: 0.25rem 0;
+  border-top: 1px solid var(--color-slate);
+  border-bottom: 1px solid var(--color-slate);
 }
 
 .log-table tr td:nth-child(2) {
