--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -796,8 +796,6 @@ nav {
 .logs-container {
   margin-right: -1rem;
   margin-left: -1rem;
-  padding-bottom: 0.5em;
-
   background-color: var(--color-bg-dark);
 }
 
@@ -806,19 +804,42 @@ nav {
   font-size: 14px;
 }
 
+.log-table .buttons {
+  margin-bottom: 1rem;
+}
+
+.log-table::-webkit-scrollbar {
+  width: 0.75rem;
+}
+
+.log-table::-webkit-scrollbar-track {
+  background: var(--color-bg-dark);
+  border-left: 1px solid var(--color-bg-light);
+  border-right: 1px solid var(--color-bg-light);
+}
+
+.log-table::-webkit-scrollbar-thumb {
+  background-color: var(--color-bg-light);
+  border-radius: 2rem;
+  border: 3px solid var(--color-bg-light);
+}
+
 .log-table {
   overflow-y: auto;
   display: block;
   table-layout: fixed;
   width: 100%;
 
-  height: 15rem;
+  height: 20rem;
+
+  padding-top: 1rem;
 
   min-height: 10rem;
   max-height: 50rem;
 
   resize: vertical;
 }
+
 .log-buttons {
   padding: 0.25rem 0;
   border-top: 1px solid var(--color-slate);
@@ -1385,4 +1406,12 @@ nav {
 
 .opacity-0 {
   opacity: 0;
+}
+
+.padding-bottom-1 {
+  padding-bottom: 1rem;
+}
+
+.padding-right-1 {
+  padding-right: 1rem;
 }
