--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -830,9 +830,7 @@ nav {
   table-layout: fixed;
   width: 100%;
 
-  height: 20rem;
-
-  padding-top: 1rem;
+  height: 22rem;
 
   min-height: 10rem;
   max-height: 50rem;
@@ -1410,6 +1408,14 @@ nav {
 
 .padding-bottom-1 {
   padding-bottom: 1rem;
+}
+
+.padding-top-1 {
+  padding-top: 1rem;
+}
+
+.padding-left-1 {
+  padding-left: 1rem;
 }
 
 .padding-right-1 {
