--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -419,16 +419,28 @@ nav {
   &.-left {
     justify-content: flex-start;
   }
+
+  &.-right {
+    justify-content: flex-end;
+  }
 }
 
 .build .error {
   color: var(--color-red-light);
 
   font-size: 16px;
+
+  max-width: 80%;
 }
 
 .build .error .message {
   margin-left: 0.2em;
+}
+
+.log-actions {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 1rem;
 }
 
 .git-info {
@@ -712,7 +724,7 @@ nav {
   display: flex;
 }
 
-.step.-line {
+.flowline-left {
   background: linear-gradient(
     90deg,
     hsla(0, 0, 0, 0) calc(3.25em - 1px),
@@ -800,6 +812,14 @@ nav {
   display: flex;
   align-items: flex-start;
   margin: 0 0.5em;
+
+  &.-align-center {
+    align-items: center;
+  }
+
+  .no-data {
+    margin-left: 1rem;
+  }
 }
 
 .logs code > div {
@@ -855,10 +875,6 @@ nav {
   &:focus {
     text-decoration: underline;
   }
-}
-
-.no-logs {
-  margin-left: 1.5em;
 }
 
 .step-error,
@@ -1332,4 +1348,20 @@ nav {
 
 .overflow-auto {
   overflow: auto;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-1 {
+  flex: 1;
+}
+
+.justify-flex-end {
+  justify-content: flex-end;
+}
+
+.opacity-0 {
+  opacity: 0;
 }
