stubbed out new logs resize and side actions

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -808,22 +808,6 @@ nav {
   margin-bottom: 1rem;
 }
 
-.log-table::-webkit-scrollbar {
-  width: 0.75rem;
-}
-
-.log-table::-webkit-scrollbar-track {
-  background: var(--color-bg-dark);
-  border-left: 1px solid var(--color-bg-light);
-  border-right: 1px solid var(--color-bg-light);
-}
-
-.log-table::-webkit-scrollbar-thumb {
-  background-color: var(--color-bg-light);
-  border-radius: 2rem;
-  border: 3px solid var(--color-bg-light);
-}
-
 .log-table {
   overflow-y: auto;
   display: block;
@@ -852,7 +836,6 @@ nav {
   display: flex;
   align-items: flex-start;
   margin: 0 0.5em;
-
   &.-align-center {
     align-items: center;
   }
@@ -1420,4 +1403,56 @@ nav {
 
 .padding-right-1 {
   padding-right: 1rem;
+}
+
+.line.top-log-actions {
+  padding-right: 1rem;
+}
+
+.log-table::-webkit-resizer {
+  border: 2px solid var(--color-bg-dark);
+
+  background: var(--color-bg-dark);
+  border-bottom: 3px solid var(--color-bg-light);
+  border-right: 3px solid var(--color-bg-light);
+}
+
+.log-table::-webkit-scrollbar {
+  width: 0.7rem;
+}
+
+.log-table::-webkit-scrollbar-track {
+  background: var(--color-bg-dark);
+}
+
+.log-table::-webkit-scrollbar-thumb {
+  background-color: var(--color-bg-light);
+  border-radius: 1rem;
+  border: 2px solid var(--color-bg-dark);
+}
+.side-actions {
+  display: flex;
+  flex-direction: column;
+}
+.side-actions-inner {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  position: absolute;
+  top: 0;
+  right: 1rem;
+  background: var(--color-bg-light);
+  margin-top: 0.5rem;
+  
+  & button {
+    border: 1px solid var(--color-bg-dark);
+    margin-bottom: 1rem;
+    svg {
+      padding: 0.2rem;
+    }
+  }
+}
+
+.side-actions-outer {
+  position: relative;
 }
