padding for step skipped/error

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -902,7 +902,7 @@ nav {
 
 .step-error,
 .step-skipped {
-  padding: 1.5em;
+ padding: 0.5rem 1.5em;
 
   color: var(--color-red-light);
   font-size: 14px;
