remove partial flowline from last step

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -733,7 +733,7 @@ nav {
   );
 }
 
-.step.-line.-last {
+.step.flowline-left.-last {
   background-repeat: no-repeat;
   background-size: 100% 2em;
 }
