--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -104,24 +104,22 @@ body.theme-light {
     border-right: 1px solid var(--color-bg-dark);
     border-bottom: 1px solid var(--color-bg-dark);
   }
-  
 
-  .log-table::-webkit-resizer {
+  .logs-table::-webkit-resizer {
     background: var(--color-white);
-  
+
     border: 2px solid var(--color-white);
-    
+
     border-bottom: 3px solid var(--color-bg-light);
     border-right: 3px solid var(--color-bg-light);
   }
-  
 
-  .log-table::-webkit-scrollbar-thumb {
+  .logs-table::-webkit-scrollbar-thumb {
     background-color: var(--color-bg-light);
     border-radius: 1rem;
     border: 2px solid var(--color-white);
   }
-  
+
   .step-error,
   .step-skipped {
     color: var(--color-red);
