ignoring ansi stylesheet during purgecss

--- a/src/scss/_ansi.scss
+++ b/src/scss/_ansi.scss
@@ -2,7 +2,7 @@
 //
 // Use of this source code is governed by the LICENSE file in this repository.
 
-/* ansi text */
+/* purgecss start ignore */
 .ansi-bold {
   font-weight: bold;
 }
@@ -188,3 +188,4 @@
     color: inherit;
   }
 }
+/* purgecss end ignore */
