--- a/src/scss/_ansi.scss
+++ b/src/scss/_ansi.scss
@@ -2,7 +2,7 @@
 //
 // Use of this source code is governed by the LICENSE file in this repository.
 
-/* purgecss start ignore */
+/*! purgecss start ignore */
 .ansi-bold {
   font-weight: bold;
 }
@@ -188,4 +188,4 @@
     color: inherit;
   }
 }
-/* purgecss end ignore */
+/*! purgecss end ignore */
