--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -797,20 +797,20 @@ nav {
   margin-right: -1rem;
   margin-left: -1rem;
   background-color: var(--color-bg-dark);
+  position: relative;
 }
 
 .logs {
   font-weight: 300;
   font-size: 14px;
-  height: 22rem;
-  overflow-y: auto;
+  // height: 22rem;
+  // overflow-y: auto;
 
-  min-height: 10rem;
-  max-height: 50rem;
-  padding-bottom: 1rem;
-  padding-top: 1rem;
+  // min-height: 10rem;
+  // max-height: 75rem;
+  // padding-bottom: 1rem;
 
-  resize: vertical;
+  // resize: vertical;
 
   &.-short {
     height: 0;
@@ -833,26 +833,6 @@ nav {
     border-radius: 1rem;
     border: 2px solid var(--color-bg-dark);
   }
-}
-
-.logs-table {
-  overflow-y: hidden;
-  display: block;
-  table-layout: fixed;
-  width: 100%;
-  position: relative;
-  top: -7rem;
-
-}
-
-.log-buttons {
-  padding: 0.25rem 0;
-  border-top: 1px solid var(--color-slate);
-  border-bottom: 1px solid var(--color-slate);
-}
-
-.logs-table tr td:nth-child(2) {
-  padding-left: 1rem;
 }
 
 .logs .line {
@@ -878,6 +858,26 @@ nav {
     flex: 1;
     margin-left: 1em;
   }
+}
+
+.logs-table {
+  overflow-y: hidden;
+  display: block;
+  table-layout: fixed;
+  width: 100%;
+  height: 22rem;
+  overflow-y: auto;
+
+  min-height: 10rem;
+  max-height: 75rem;
+  padding-bottom: 1rem;
+  padding-top: 3rem;
+  resize: vertical;
+
+}
+
+.logs-table tr td:nth-child(2) {
+  padding-left: 1rem;
 }
 
 .logs-table tr:hover,
@@ -919,6 +919,17 @@ nav {
     text-decoration: underline;
   }
 }
+
+.log-buttons {
+  padding: 0.25rem 0;
+  border-bottom: 1px solid var(--color-slate);
+  position: absolute;
+  top: 0;
+  background: var(--color-bg-dark);
+  width: 100%;
+  z-index: 1;
+}
+
 .line.top-log-actions {
   padding: 0.2rem;
   padding-right: 0.6rem;
@@ -931,11 +942,20 @@ nav {
 .tracker {
   opacity: 0;
 }
+.side-outer {
+  height: 100%;
+  position: absolute;
+  right: 1rem;
+  padding-top: 2rem;
+}
 
 .side-log-actions {
+  // position: absolute;
+  // top: 3rem;
+  // right: 0;
+  margin: 1rem 1rem 0.5rem 0;
   position: sticky;
   top: 1rem;
-  margin: 1rem 1rem 0.5rem 0;
 }
 
 .side-log-actions {
@@ -954,7 +974,6 @@ nav {
 
   button {
     background: var(--color-bg-light);
-
     margin-bottom: 0.4rem;
   }
 }
