--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -816,23 +816,6 @@ nav {
     height: 0;
   }
 
-  &::-webkit-resizer {
-    background: var(--color-bg-dark);
-
-    border: 2px solid var(--color-bg-dark);
-    border-bottom: 3px solid var(--color-bg-light);
-    border-right: 3px solid var(--color-bg-light);
-  }
-
-  &::-webkit-scrollbar {
-    width: 0.7rem;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background-color: var(--color-bg-light);
-    border-radius: 1rem;
-    border: 2px solid var(--color-bg-dark);
-  }
 }
 
 .logs .line {
@@ -871,9 +854,28 @@ nav {
   min-height: 10rem;
   max-height: 75rem;
   padding-bottom: 1rem;
-  padding-top: 3rem;
+  padding-top: 1rem;
   resize: vertical;
 
+
+  &::-webkit-resizer {
+    background: var(--color-bg-dark);
+
+    border: 2px solid var(--color-bg-dark);
+    border-bottom: 3px solid var(--color-bg-light);
+    border-right: 3px solid var(--color-bg-light);
+  }
+
+  &::-webkit-scrollbar {
+    width: 0.7rem;
+
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--color-bg-light);
+    border-radius: 1rem;
+    border: 2px solid var(--color-bg-dark);
+  }
 }
 
 .logs-table tr td:nth-child(2) {
@@ -923,8 +925,6 @@ nav {
 .log-buttons {
   padding: 0.25rem 0;
   border-bottom: 1px solid var(--color-slate);
-  position: absolute;
-  top: 0;
   background: var(--color-bg-dark);
   width: 100%;
   z-index: 1;
@@ -946,14 +946,11 @@ nav {
   height: 100%;
   position: absolute;
   right: 1rem;
-  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .side-log-actions {
-  // position: absolute;
-  // top: 3rem;
-  // right: 0;
-  margin: 1rem 1rem 0.5rem 0;
+  margin: 0.5rem 0 0.5rem 0;
   position: sticky;
   top: 1rem;
 }
