revert step skipped fixes

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -964,7 +964,7 @@ nav {
 
 .step-error,
 .step-skipped {
-  padding: 1rem 1.5em;
+  margin-left: 1.5em;
 
   color: var(--color-red-light);
   font-size: 14px;
