step-skilled style

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -967,15 +967,10 @@ nav {
 
 .step-error,
 .step-skipped {
-  margin-left: 1.5em;
+  padding: 0.5rem 1em;
 
   color: var(--color-red-light);
   font-size: 14px;
-}
-
-.step-error .message,
-.step-skipped .message {
-  margin-left: 0.2em;
 }
 
 .animated {
