--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -879,7 +879,7 @@ nav {
 
 .step-error,
 .step-skipped {
-  padding: 0.5rem 1em;
+  padding: 0.5rem 1rem;
 
   color: var(--color-red-light);
   font-size: 14px;
