enhance(logs): scrollable/windowed logs and actions sidebar (#197)
* added log tracker, in progress of auto scroll

* add successful util

* modulized build

* remove logs track code

* revert docker-compose

* revert docker-compose

* revert logss

* remove debug

* revert

* revert

* revert

* remove bug workaround

* removing dead code

* lint

* reimplement tracker code

* add more lines

* adding logic for auto expanding steps

* in progress of migrating steps to  step

* separated step and build follow

* stub auto expand/collapse buttons

* add expand and collapse buttons

* action -> cmd consistency

* added auto expansion to follow onclick

* merging with master

* fixing flex style in build preview

* updating model fields

* refactor viewRunningStep

* moving log html to view

* refactor using RemoteData.unwrap

* grammar update in comment

* code refactor/style improvements

* more code cleanup/refactor using RemoteData.unwrap

* lint

* lint

* lint

* move tooltip scss

* cleanup tooltip scss

* scss cleanup

* lint

* implementing download logs functionality

* fix logs with no data

* lint

* lint

* revert docker-compose

* px to rem

* fix bug with pausing auto expand and collapsing a step now stops follow

* removing  stepname from download filename

* adding test attributes and fixing build num in fixture

* lint and cypress view tests

* adding button interaction tests

* stripped follow all steps and moved expand/collapse all below build

* cypress tests in progress, expand/collapse all

* expand/collapse all cypress tests

* step->steps

* add comments and fix cypress test

* adding log follow test

* revert docker-compose

* moving  log actions to step success and fixing lint

* lint

* elm-format

* potential cypress test fix

* changed crumb structure for secrets, removed org links and changed repo secrets link to point

--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -105,6 +105,21 @@ body.theme-light {
     border-bottom: 1px solid var(--color-bg-dark);
   }
 
+  .logs-table::-webkit-resizer {
+    background: var(--color-bg);
+
+    border: 2px solid var(--color-bg);
+
+    border-bottom: 3px solid var(--color-bg-light);
+    border-right: 3px solid var(--color-bg-light);
+  }
+
+  .logs-table::-webkit-scrollbar-thumb {
+    background-color: var(--color-bg-light);
+    border-radius: 1rem;
+    border: 2px solid var(--color-bg);
+  }
+
   .step-error,
   .step-skipped {
     color: var(--color-red);
